--- a/notes/NotesSection1.ipynb
+++ b/notes/NotesSection1.ipynb
@@ -433,18 +433,19 @@
     "- to get the mean of 1 variable we can do something like: $$ \\left< x \\right> = \\int P(x,y) x dx dy $$ \n",
     "- we can now do things like take the expectation of a product: $$ \\left< xy \\right> = \\int P(x,y) xy dx dy $$ \n",
     "- Similarly to the variance, we can use this to define a covariance: $$\\mathrm{Cov(x,y)}=\\left< x'y' \\right>$$\n",
-    "- The covariance is often written as a matrix, for instance if there is a set of three variables, x,y,z, then the covariance matrix is $$C = \\begin{pmatrix}\n",
-    "\\left\\langle x'x'\\right\\rangle  & \\left\\langle x'y'\\right\\rangle  & \\left\\langle x'z'\\right\\rangle \\\\\n",
-    "\\left\\langle y'x'\\right\\rangle  & \\left\\langle y'y'\\right\\rangle  & \\left\\langle y'z'\\right\\rangle \\\\\n",
-    "\\left\\langle z'x'\\right\\rangle  & \\left\\langle z'y'\\right\\rangle  & \\left\\langle z'z'\\right\\rangle \n",
-    "\\end{pmatrix}$$\n",
-    "    - One advantage of this form is that it shows \n",
-    "- The covariance can also be used to define the correlation as $\\rho(x,y)=\\mathrm{Cov}(x,y)\\left(s(x)s(y)\\right)^{-1}$ or $$\\rho = \\frac{\\left< x'y' \\right>}{\\left< x'^2 \\right>^{1/2}\\left< y'^2 \\right>^{1/2}}$$\n",
+    "- The covariance is often written as a matrix, for instance if there is a set of three variables, x,y,z, then the covariance matrix is $$C = \\begin{pmatrix} \\left< x'x'\\right>  & \\left< x'y'\\right> & \\left< x'z'\\right> \\\\ \\left< y'x'\\right>  & \\left< y'y'\\right> & \\left< y'z'\\right> \\\\ \\left< z'x'\\right>  & \\left< z'y'\\right>  & \\left< z'z'\\right> \\end{pmatrix}$$\n",
+    "    - the matrix element can also be written as $$ C_{ij} = <x'_ix'_j> $$\n",
+    "- The covariance can also be used to define the correlation: $$\\rho = \\frac{\\left< x'y' \\right>}{\\left< x'^2 \\right>^{1/2}\\left< y'^2 \\right>^{1/2}}$$\n",
     "- Analogously to the variance the covariance can be written $$\\left< x'y' \\right>=\\left< xy \\right>-\\left< x\\right>\\left< y\\right>$$ and so after doing some rearrange and substituting we can write $$\\left< xy \\right> = \\left< x\\right>\\left< y\\right> + \\rho {\\left< x'^2 \\right>^{1/2}\\left< y'^2 \\right>^{1/2}} $$ Again this expression, or in a slightly manipulated form, comes up very often in the study of turbulent fluids. For instance imagine that $x$ is the velocity and $y$ is the temperature, and the probability is an average over some domain, then our expression tells us how to divide the flow into laminar and turbulent components, and what the turbulent component depends on.\n",
-    "  - Note that this also applies to the means of quadratic products of variables as well, e.g. $\\overline{xy}=\\overline{x'y'}+\\overline{x}\\,\\overline{y}$.\n",
     "- If two variables are independent, then  $$ \\left< xy \\right> = \\int P(x) x dx \\int P(y) dy  = \\left<x\\right>\\left<y\\right>$$  which implies that $\\left<x'y'\\right>=0$ and also $\\rho(x,y)=0$.\n",
     "  - note that the converse is not also true, two variables can be uncorrelated but still be dependent.\n",
-    "    \n",
+    "\n",
+    "## Estimating the moments\n",
+    "- similar to the univariate case, we can define the mean as $\\overline{xy}=\\frac{1}{M}\\sum_{i=1}^{i=M} x_iy_i$\n",
+    "- The covariance can be estimated using matrix algebra. Suppose that we have $N$ variables, that are sampled M times. To make it simple, lets assume that all the variables have 0 mean. The data can be formed into a $NxM$ matrix $X$. Then the covariance matrix can be estimated using $$ C = \\frac{1}{M} XX^T$$\n",
+    "- everything that comes from the exact definitions using expectation values also carries over into the estimators,  e.g. $\\overline{xy}=\\overline{x'y'}+\\overline{x}\\,\\overline{y}$.\n",
+    " \n",
+    "\n",
     "## Multivariate Gaussians\n",
     "\n",
     "- imagine we have a set of N variables. Now put them into a vector $\\vec{x}$. The mean vector is $\\vec{mu}=\\left<\\vec{x}\\right>$, and the covariance matrix is $$\\Gamma = \\left<\\vec{x}\\vec{x}^T\\right> - \\vec{\\mu}\\vec{\\mu}^T$$\n",
