Added Section2 materials

--- a/notes/NotesSection2.ipynb
+++ b/notes/NotesSection2.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "1. $\\left<z\\right> =  \\left<x\\right>+\\left<y\\right>$\n",
     "2. $\\left<z'^2\\right> = \\left<x'^2\\right> + \\left<y'^2\\right>$\n",
-    "3. If $x \\sim \\mathcal{N}(\\mu_1,\\gamma^2_1)$, and $y \\sim \\mathcal{N}(\\mu_2,\\gamma^2_2)$, then $z \\sim \\mathcal{N}(\\mu_1+\\mu_2,\\gamma^2_1+\\gamma^2_2)$. \n",
+    "3. If $x \\sim \\mathcal{N}(\\mu_1,\\sigma^2_1)$, and $y \\sim \\mathcal{N}(\\mu_2,\\sigma^2_2)$, then $z \\sim \\mathcal{N}\\left(\\mu_1+\\mu_2,\\sigma^2_1+\\sigma^2_2\\right)$. \n",
     "   - This only works for Gaussians, for other distributions it can be more complicated. \n",
     "   - This is easy to prove with Fourier transforms, otherwise it is a lot of annoying algebra.\n",
     "\n",
