--- a/labs/Labs2.ipynb
+++ b/labs/Labs2.ipynb
@@ -36,13 +36,8 @@
     "```\n",
     "The data_vars and coordinates are python dictionaries, that have the keys set to be the name we want to save with. The values are tuples, where the first entry is the dimension the data has, and the second is the data that we are storing.\n",
     "\n",
-    "1. save that dataArray using to netcdf using ```ds.to_netcdf('/file/path/to/somewhere/theFileName.nc')```\n"
+    "1. save that Dataset using to netcdf using ```ds.to_netcdf('/file/path/to/somewhere/theFileName.nc')```\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -58,8 +53,9 @@
     "   2. How many data points do you think you need in order to reliably calculate the mean? How does this relate to the parameters of the process that you simulated? \n",
     "3. Load the data in MTLWstation_T2m.nc and calculate the autocorrelation using 30*24=720 lags \n",
     "   1. How does this example compare to the previous example?\n",
+    "   2. repeat the calculation with 365*24=8760 lags. How do you interpret this result?\n",
     "\n",
-    "Hint: The data in MTLWstation_T2m.nc is a 2m temperature time series from the Montreal International Airport. You might want to make a plot of it to see whats going on. You may also want to make several plots of both the data and autocovariance zoomed in at different timescales.  "
+    "Hint: The data in MTLWstation_T2m.nc is a hourly 2m temperature time series from the Montreal International Airport. You might want to make a plot of it to see whats going on. You may also want to make several plots of both the data and autocovariance zoomed in at different timescales.  "
    ]
   },
   {
@@ -90,11 +86,6 @@
     "   3. MTLWstation_T2m.nc\n",
     "2. Compare the power spectrum from the different datasets. What do you notice? What can you conclude about the Montreal weather data?"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
