Adding material for Section 3

--- a/notes/NotesSection2.ipynb
+++ b/notes/NotesSection2.ipynb
@@ -228,7 +228,7 @@
     "## Numerically simulating the 1D OU process\n",
     "\n",
     "- there are 2 ways that this can be done.\n",
-    "-  The first is to use the differential equation form that we started with: $$dx_i = -\\frac{x_i}{\\tau}+\\gamma \\sqrt{dt}\\,r_i $$ and then each time step can be advanced with $x_{i+1}=x_{i}+dx_{i}$\n",
+    "-  The first is to use the differential equation form that we started with: $$dx_i = -\\frac{x_i}{\\tau}dt+\\gamma \\sqrt{dt}\\,r_i $$ and then each time step can be advanced with $x_{i+1}=x_{i}+dx_{i}$\n",
     "   - for non stochastic equation, this is called Euler's method. For stochastic equations, this is called the Euler-Maruyama method.\n",
     "   - the limitation of this method is that the time step needs to be small, usually $dt/\\tau<100$ works.\n",
     "- The second is to discretize the full integral solution. For simplicity set $x_0=0$, then we will have $$\\begin{align*}x_n &=& \\int^{t}_0 \\exp\\left(\\frac{t'-t}{\\tau}\\right) \\gamma dW \\\\ x_n & \\approx & \\sum_{i=0}^{i=n} \\gamma e^{\\frac{t_i}{\\tau}}e^{-\\frac{t_n}{\\tau}} \\gamma\\sqrt{dt}\\,r_i \\\\ x_n &=& \\left(\\sum_{i=0}^{i=n-1} \\gamma e^{\\frac{t_i}{\\tau}}e^{-\\frac{t_{n-1}}{\\tau}} \\gamma\\sqrt{dt}\\,r_i\\right)e^{-\\frac{t_n-t_{n-1}}{\\tau}} + e^{\\frac{t_n}{\\tau}}e^{-\\frac{t_n}{\\tau}} \\gamma\\sqrt{dt}\\,r_n \\\\ x_n &=& x_{n-1} e^\\frac{-dt}{\\tau} +  \\gamma\\sqrt{dt}\\,r_n\n",
@@ -599,6 +599,11 @@
     "- One reason to use an AR process instead of a stochastic differential equation instead of a more general stochastic differential equation is that an AR process typically has fewer parameters. However this can also be a drawback, since for higher dimensions they are less able to capture more complicated behaviour than the full (linear) stochastic differential equation can. Again, I also find the temporal scaling difficult to determine. However they are also ubiquitously used throughout the statistics literature, so its worth knowing how they compare. \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
