catching up to labs 3

--- a/notes/NotesSection2.ipynb
+++ b/notes/NotesSection2.ipynb
@@ -270,7 +270,7 @@
     "- Note, some books, such as the Random Data book in the course references, refer to $\\left<x(t)x(t+l)\\right>$ as the autocovariance, and $\\left<x'(t)x'(t+l)\\right>$ as the autocorrelation. I find this to be really confusing, but if you read that book or another and find that $|R(l)|>1$, it may be a difference in definition.\n",
     "\n",
     "\n",
-    "## 2.2 - Stationary Autocovariance of the 1D OU process \n",
+    "## Stationary Autocovariance of the 1D OU process \n",
     "\n",
     "- We know that for the 1D OU process the only term that matters for the variance is the second random term involving $dW$. Similarly this is the only term that matters for the covariance, and we can write the whole expression: \n",
     "$$\n",
@@ -298,7 +298,7 @@
     "- The estimate of the autocorrelation will be the same, its just the estimate of the autocovariance divided by the variance. \n",
     "  \n",
     "- An interesting propoerty of estimates of the autocovariance and autocorrelation is that the estimates get worse the longer of a lag that we use. Intuitively this makes sense, For a lag of 0 we can use the entire time series to estimate the covariance, for a lag of 1 we can only use n-1 points to estimate the time series, and for a lag of 1000 we can only use the n-1000 points to estimate the covariance. This becomes a problem as $l$ starts to grow.  \n",
-    "  - To consider this more quantitiatively, lets look at the autocorrelation. Remember from section 1 that the correlation has a t-value according to $$t_0 = \\frac{R(0) \\sqrt{n-2}}{\\sqrt{1-R(0)^2}} $$ For the autocorrelation we have to replace $n$ with $n-l$ to get $$t_l = \\frac{R(l) \\sqrt{n-l-2}}{\\sqrt{1-R(l)}} $$\n",
+    "  - To consider this more quantitiatively, lets look at the autocorrelation. Remember from section 1 that the correlation has a t-value according to $$t_0 = \\frac{R(0) \\sqrt{n-2}}{\\sqrt{1-R(0)^2}} $$ For the autocorrelation we have to replace $n$ with $n-l$ to get $$t_l = \\frac{R(l) \\sqrt{n-l-2}}{\\sqrt{1-R(l)^2}} $$\n",
     "  - So for large $l$ the correlation needs to be larger in order to get as large a t-value. In practice most processes tend to have $R(l\\rightarrow \\infty)0$, which exacerbates the effect of having a small sample. \n",
     "  \n",
     "## Effects of autocorrelation on estimating parameters\n",
