small fixes and 3.1_Extra

--- a/notes/NotesSection3.ipynb
+++ b/notes/NotesSection3.ipynb
@@ -25,8 +25,8 @@
     "- The Fourier transform is associated with oscillating signals. s is called the sampling frequency (more on this later), X(s) is the \"spectral representation of\" x. It represents how much energy is associated with oscillations with sampling frequency s in the time series x.\n",
     "    - note that X can be complex even if x is real. This will come up a lot. Also, the python fft code will generate complex values, so its good to know that they are coming.\n",
     "    - one way to think about this is that if you only had the real part you would only get a cosine term, which would be a phase locked wave (because you only have 1 piece of information, the amplitude). With the real and imaginary part you can express a wave with an amplitude and phase, which is necessary to decompose our data into different waves which might be in different phases. \n",
-    "- the inverse fourier transfrom is defined as $$x\\left(t\\right)=\\mathcal{F}^{-1}(X)=\\int^\\infty_{-\\infty} X\\left(s\\right) \\exp\\left(-j2\\pi s t \\right)ds$$\n",
-    "    - note that some books use $\\omega=2\\pi s$ as a variable, in which case there needs to be an extra fractor of $(2\\pi)^{-1}$ in the inverse fourier transform\n",
+    "- the inverse fourier transfrom is defined as $$x\\left(t\\right)=\\mathcal{F}^{-1}(X)=\\int^\\infty_{-\\infty} X\\left(s\\right) \\exp\\left(j2\\pi s t \\right)ds$$\n",
+    "    - note that some books use $\\omega=2\\pi s$ as a variable, in which case there needs to be an extra factor of $(2\\pi)^{-1}$ in the inverse fourier transform\n",
     "- $x(t)$ and $X(s)$ are called a \"Fourier transform pair\". Later we will take a look at a bunch of Fourier transform pairs.\n",
     "### Discrete Fourier Transforms \n",
     "- In practice, we can't do continuous integrals on computers, so we need to discretize these expressions. Doing this is called a discrete Fourier transform or the DFT.\n",
@@ -96,7 +96,7 @@
    "metadata": {},
    "source": [
     "### some python functions\n",
-    "- In the late 60s Cooley and Tukey came up with an incredibly good algorithm called the \"Fast Fourier Transform\", which, as the name suggests, is really fast. The details aren't really important, the gist is that they figured out that you could do the integrals in the DFT very quickly by factoring them into sequences based on prime numbers, and then recombining these sequences as needed to get the final answer. If you have N samples this reduces the operations needed from something like $\\mathcal{O}(N^2)$ to $\\mathcal{O}(N\\log N)$, so if you have $\\mathcal{O}(10^6)$ samples a normal DFT would be $\\mathcal{O}(10^12)$ calculations, but an FFT would be $\\mathcal{O}(6x10^6)$ operations. This was such an improvement it inspired an entire revolution in scientific computing when it happened, and it underlies many digital algorithms being used today.\n",
+    "- In the late 60s Cooley and Tukey came up with an incredibly good algorithm called the \"Fast Fourier Transform\", which, as the name suggests, is really fast. The details aren't really important, the gist is that they figured out that you could do the integrals in the DFT very quickly by factoring them into sequences based on prime numbers, and then recombining these sequences as needed to get the final answer. If you have N samples this reduces the operations needed from something like $\\mathcal{O}(N^2)$ to $\\mathcal{O}(N\\log N)$, so if you have $\\mathcal{O}(10^6)$ samples a normal DFT would be $\\mathcal{O}(10^{12})$ calculations, but an FFT would be $\\mathcal{O}(6\\times 10^6)$ operations. This was such an improvement it inspired an entire revolution in scientific computing when it happened, and it underlies many digital algorithms being used today.\n",
     "  \n",
     "- In general programming an FFT is quite annoying. Fortunately basically every mathematical library has it implemented already. \n",
     "  \n",
