--- a/notes/NotesSection3.ipynb
+++ b/notes/NotesSection3.ipynb
@@ -1157,7 +1157,7 @@
     "This material comes from: Welch, Peter. \"The use of fast Fourier transform for the estimation of power spectra: a method based on time averaging over short, modified periodograms.\" IEEE Transactions on audio and electroacoustics 15.2 (1967): 70-73.\n",
     "\n",
     "\n",
-    "- The error squared of the spectra of a Gaussian process is $$ \\left(\\sigma P_{xx}\\right)^2 = \\frac{P^2}{m}\\left( 1 + 2 \\sum_{j=1}^{n/m-1} \\frac{n/m-j}{n/m} \\rho(j)\\right) $$ where $$\\rho(j)= \\left(\\sum h(j)h(m-j)\\right)^2 \\left(\\sum h^2(j) \\right)^2 $$\n",
+    "- The error squared of the spectra of a Gaussian process is $$ \\left(\\sigma P_{xx}\\right)^2 = \\frac{P^2}{m}\\left( 1 + 2 \\sum_{j=1}^{n/m-1} \\frac{n/m-j}{n/m} \\rho(j)\\right) $$ where $$\\rho(j)= \\left(\\sum h(j)h(m-j)\\right)^2 \\left(\\sum h^2(j) \\right)^{-2} $$\n",
     "\n",
     "- Comparing to the estimate without windowing or any overlap, this estimate would have $2m$ degrees of freedom. For a given window $\\rho$ can be evaluated, and then the full expression in the first expression can be calculated, and the difference between this and the original expression gives the effective degrees of freedom."
    ]
