--- a/notes/NotesSection4.ipynb
+++ b/notes/NotesSection4.ipynb
@@ -61,9 +61,9 @@
     "\n",
     "The second figure shows point correlations for two different points.\n",
     "\n",
-    "<img src=\"../images/NaiveCorrelationTest.png\" width=100%, height=100%>\n",
+    "<img src=\"../images/NaiveCorrelationTest.png\" width=75%, height=75%>\n",
     "\n",
-    "<img src=\"../images/PointCorrelation.png\" width=100%, height=100%>"
+    "<img src=\"../images/PointCorrelation.png\" width=75%, height=75%>"
    ]
   },
   {
@@ -79,7 +79,7 @@
     "- This is a problem when we want to do a hypothesis test at every grid point. If we just compute a test statistic at every grid point and compare it to one critical value this is equivalent to doing independent hypothesis tests at every grid point, which most of the time is overestimating how independent the data is. \n",
     "- In practice what will happen is that there are many datapoints that will falsely reject the null hypothesis. These false rejections will look significant, but will in fact not be significantly different from the null hypothesis. The rate of these datapoints where the null hypothesis is falsely rejected are called \"False Discoverty Rate\" or FDR.  \n",
     "\n",
-    "<img src=\"../images/CorrelationLengthScales.png\" width=100%, height=100%>\n",
+    "<img src=\"../images/CorrelationLengthScales.png\" width=75%, height=75%>\n",
     "\n",
     "### Controlling the False Discovery Rate \n",
     "\n",
@@ -111,9 +111,9 @@
    "source": [
     "# 4.2 - Principle Component Analysis (PCA)\n",
     "\n",
-    "I said in the introductory lecture that PCA is one of the most misused ideas in statistics. This is because although the technique is very powerful, it has an inherent property that it will always produce patterns of correlation from the data, for reasons discussed below. This means that even in the lack of any meaningful physical or mechanistic process taking place PCA will always produce interesting patterns to study. I say this not to discourage you from using it, but simply to appreciate the challenges in applying a statistical technique. \n",
+    "I said in the introductory lecture that PCA is one of the most misused ideas in statistics. This is because although the technique is very powerful, it has an inherent property that it will always produce patterns of correlation from the data, for reasons discussed below. This means that even in the lack of any meaningful physical or mechanistic process taking place PCA will always produce interesting patterns to study. I say this not to discourage you from using it, but simply to appreciate the challenges in interpreting its output.\n",
     "\n",
-    "We won't have time to discuss *all* the ways that PCAs are sometimes misused in atmospheric and oceanic science, but there are a few papers from the references which cover the challenges in fairly exhaustive detail which I will reference as we go through the next couple of sections:\n",
+    "We won't have time to discuss *all* the ways that PCAs are sometimes misused in atmospheric and oceanic science, but there are a few papers from the references in the syllabus which cover the challenges in fairly exhaustive detail:\n",
     "\n",
     "- Chen, Ge, and Xuan Wang. \"Impact of domain geometry on the results of empirical orthogonal function analysis.\" Annals of GIS 20.3 (2014): 205-216.\n",
     "- Monahan, Adam H., et al. \"Empirical orthogonal functions: The medium is the message.\" Journal of Climate 22.24 (2009): 6501-6514.\n",
@@ -150,8 +150,9 @@
     "Q &=& ZZ^T \\\\\n",
     "\\end{align*} $$\n",
     "\n",
-    "- $Z$ will be a new matrix similar to $X$: $$ Z=[z_1(t),...,z_N(t)] $$ where each of the $z_i (t)$ is a time series. Each $z_i$ is called a principle component of $X$. \n",
+    "- $Z$ will be a new matrix similar to $X$: $$ Z=[z_1(t),...,z_N(t)] $$ where each of the $z_i (t)$ is a time series. Each $z_i$ is called a principal component of $X$. \n",
     "  - Unlike the $x_i$ though which each represent one grid point, the $z_i$ represent linear combinations of the grid points. The weighting which was used to create them is $p_i$, i.e. the ith eigenvector of $C$. \n",
+    "    - $p_i$ are also sometimes called \"the loading\"\n",
     "  - An important result is that since $Q$ is diagonal $z_i z_j^T = Q_{ij}\\delta_{ij}$, so each principle component is uncorrelated from the others. \n",
     "  - Also, each principle component is associated with a single eigenvalue of $C$. Since we know that $Q$ is partioning the variance up between different components, so $q_i/\\mathrm{TR}(Q)$ is called \"the fraction of variance\" explained by $z_i$."
    ]
@@ -168,9 +169,9 @@
     "\n",
     "The first figure shows the Eigenspectrum of the Covariance matrix (Q) of winter time SSTs from an observational dataset. The second figure shows the first EOF ($\\vec{p}$) and corresponding principle component ($z_i$). Note that although $\\vec{p}$ was identified using the flattened dataset they have reshaped it into a 2D map in order to make a nice looking plot. You can see that the EOF looks like an ENSO-ish signal, and it explains a large fraction of the total variance. \n",
     "\n",
-    "<img src=\"../images/EigenSpectrum.png\" width=100%, height=100%>\n",
+    "<img src=\"../images/EigenSpectrum.png\" width=75%, height=75%>\n",
     "\n",
-    "<img src=\"../images/EOF_PCA.png\" width=100%, height=100%>\n"
+    "<img src=\"../images/EOF_PCA.png\" width=75%, height=75%>\n"
    ]
   },
   {
@@ -259,7 +260,7 @@
     "In general, EOF analysis involves a pretty standard series of steps:\n",
     "\n",
     "1. Remove the mean from your dataset and put it into the data matrix X (if your data is more than 1D you may need to reshape it).\n",
-    "2. Calculate the covariance matrix as $C = \\frac{1}{M} \\sum_i^{M} X^T X$.\n",
+    "2. Calculate the covariance matrix as $C = \\frac{1}{M}XX^T$.\n",
     "3. Find the first L eigenvectors and eigenvalues of $C$.\n",
     "4. Calculate the fraction of variance explained by each EOF.\n",
     "5. Find the PC associated with the EOF by $\\vec{p_i}^TX$. \n",
@@ -271,25 +272,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Effects of Geometry on EOFs \n",
     "\n",
-    "### (Some of the) challenges with PCA\n",
+    "- Because EOFs store information as efficiently as possible, they will change if the input data is changed. \n",
+    "- A good example of this is changing the region that the EOFs are being calculated over. For instance if you calculate the EOFs over the entire globe, you will get different EOFs than if you calculate them over each hemisphere seperately. \n",
+    "- This means that if you want to calculate EOFs of something and report them, its not just enough to tell someone what variable you are calculating the EOFs of, but also what domain you are using to do it.\n",
     "\n",
-    "- If you compute the EOFs of one field using all data in a domain, you will not get the same answer as if you compute the EOFs using only partial information. This is because \n",
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## An Example \n",
+    "### An Example \n",
     "\n",
     "This example is from \n",
     "- Chen, Ge, and Xuan Wang. \"Impact of domain geometry on the results of empirical orthogonal function analysis.\" Annals of GIS 20.3 (2014): 205-216.\n",
     "\n",
     "It shows the PCAs of satellite precipitation calculated for a variety of different domains:\n",
     "\n",
-    "<img src=\"../images/EOF_Domain_Splitting.png\" width=100%, height=100%>"
+    "<img src=\"../images/EOF_Domain_Splitting.png\" width=75%, height=75%>"
    ]
   },
   {
@@ -300,13 +296,15 @@
     "\n",
     "The example covered here is discussed in depth in \n",
     "- North, Gerald R., et al. \"Sampling errors in the estimation of empirical orthogonal functions.\" Monthly weather review 110.7 (1982): 699-706.\n",
+    "\n",
     "And the specific proof that I do follows largely from\n",
     "- Monahan, Adam H., et al. \"Empirical orthogonal functions: The medium is the message.\" Journal of Climate 22.24 (2009): 6501-6514.\n",
     "\n",
     "## EOFs of an SDE with a real symmetric operator and white noise forcign\n",
     "\n",
     "- So on their own the EOFs are totally meaningless. However, there are special cases where they can be interpreted physically, but the conditions are *very* specific, to the point where its hard to imagine them happening. Still it's an interesting example that gives us a lot of insight into how EOFs and covariance work more generally. \n",
-    "- So far in the multivariate SDEs we have analyzed the different elements haven't had any significance. Now we're going to pretend that we have a set of points, where at each point we have a 1D OU process with uncorrelated noise. If we let the points interact diffusively, then we have something like $$d\\vec{x} = k D \\vec{x} dt - \\frac{1}{\\tau} \\vec{x} dt + B d\\vec{W}$$ where $B$ is a noise strength matrix.\n",
+    "- So far in the multivariate SDEs we have analyzed the different elements haven't had any significance. Now we're going to pretend that we have a set of points, where at each point we have a 1D OU process with uncorrelated noise.\n",
+    "- If we let the points interact diffusively, then we have something like $$d\\vec{x} = k D \\vec{x} dt - \\frac{1}{\\tau} \\vec{x} dt + B d\\vec{W}$$ where $B$ is a noise strength matrix.\n",
     "- Despite the fact that this is now a spatially distributed system, it's still an example of a multivariate system with gaussian noise, so all the theorems that we learned before still apply to it. In particular, the fluctuation dissipation theorem holds: $$AC+CA^T=-BB^T$$, where $C$ is the stationary covariance matrix and $A=kD-\\frac{1}{\\tau}I$. \n",
     "- Since $A$ is is a symmetric real matrix we know that it can be written using its eigenvalues and eigenvectors: $A=J^TLJ$, where $J^TJ=I$, e.g. $$\\begin{align*}\n",
     "    AC+CA^T&=&-BB^T\\\\\n",
@@ -384,7 +382,7 @@
     "$$ R_{xy} R_{yx} = \\hat{Q}_x S_{\\rho} \\hat{Q}^T_y \\hat{Q}_y S_{\\rho} \\hat{Q}^T_x = \\hat{Q}_x S_{\\rho}^2 \\hat{Q}^T_x  $$\n",
     "  - Similar equations hold for $\\hat{Q}_y$.\n",
     "\n",
-    "- The matrices $\\hat{Q}_x$ and $\\hat{Q}^T_y$ play similar roles to the EOFs, however $\\hat{Q}_x$ applies only to the dataset $x$ and $\\hat{Q}^T_y$ applies only to the dataset $y$. A pair of vectors $\\hat{q}^{i}_x$ and $\\hat{q}^{i}_y$ tell us about the maximum correlation which could be found, associate with the singular value $\\rho$, which is the entry (i,i) in $S_{\\rho}$. \n",
+    "- The weighting functions $q_x$ and $q_y$ are often referred to as \"loadings\". They play similar roles to EOFs, however $\\hat{Q}_x$ applies only to the dataset $x$ and $\\hat{Q}^T_y$ applies only to the dataset $y$. A pair of vectors $\\hat{q}^{i}_x$ and $\\hat{q}^{i}_y$ tell us about the maximum correlation which could be found, associate with the singular value $\\rho$, which is the entry (i,i) in $S_{\\rho}$.  \n",
     "\n",
     "- The time series $r_x$ and $r_y$ that can be found are called the \"Cannonical Variates\". They play a similar role to PCAs.\n",
     "\n",
@@ -417,9 +415,9 @@
     "## an Example:\n",
     "\n",
     "\n",
-    "this figure shows the CCA loading patterns $q_x$ and $q_y$ where $x$ is taken to be the tropical pacific SSTs, and $y$ is taken to be the 500 hPA geopotential heights. The main idea was to try and find the influence of the north pacific SSTs on the position of the northern hemisphere storm tracks. Again, $q_x$ and $q_y$ were found as vectors but reshaped into maps in order to make a nice plot. Note that the first modes do not \n",
+    "This figure shows the CCA loading patterns $q_x$ and $q_y$ where $x$ is taken to be the tropical pacific SSTs, and $y$ is taken to be the US monthly surface temperatures. Again, $q_x$ and $q_y$ were found as vectors but reshaped into maps in order to make a nice plot. Note that the data was preconditioned in this case by using the first 4 SST PCAs and the first 3 US monthly surface temperature PCAs. \n",
     "\n",
-    "<img src=\"../images/CCA.png\" width=100%, height=100%>\n",
+    "<img src=\"../images/CCA.png\" width=75%, height=75%>\n",
     "\n"
    ]
   },
