--- a/notes/NotesSection4.ipynb
+++ b/notes/NotesSection4.ipynb
@@ -579,7 +579,7 @@
     "$$UU^T=I$$\n",
     "$$VV^T=I$$\n",
     "\n",
-    "- Unlike diagonalization where $\\Lambda$ is a square matrix, in SVD $\\Lambda will have shape $n_x \\times n_y$. The values in $\\Lambda$ are called the singular values. By construction these will lie along the \"main diagonal\" in $\\Lambda$, which are entries (0,0), (1,1), etc.\n",
+    "- Unlike diagonalization where $\\Lambda$ is a square matrix, in SVD $\\Lambda$ will have shape $n_x \\times n_y$. The values in $\\Lambda$ are called the singular values. By construction these will lie along the \"main diagonal\" in $\\Lambda$, which are entries (0,0), (1,1), etc.\n",
     "- If $n_x=n_y$, then $\\Lambda$ is a square matrix and the SVD reduces to diagonalization.\n",
     "- If $n_x<n_y$, then $\\Lambda$ looks like \n",
     "$$ \\Lambda = \n",
