--- a/labs/Labs5/PrecipOI.ipynb
+++ b/labs/Labs5/PrecipOI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_d=xr.open_dataset('/home/rfajber/ResearchMethodsCourse/data/NAbox.doer3.precip.mon.mean.nc').sel(time=slice('1980-01-01','2014-12-01'))\n",
+    "ds_d=xr.open_dataset('../../data/NAbox.doer3.precip.mon.mean.nc').sel(time=slice('1980-01-01','2014-12-01'))\n",
     "precipD = ds_d.prate.data*1000/999.7*(24*3600) # convert from kg/m^2/s to mm/day\n",
     "lon,lat = ds_d.longitude.data, ds_d.latitude.data\n",
     "nlon,nlat = len(lon),len(lat)\n",
@@ -30,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_g=xr.open_dataset('/home/rfajber/ResearchMethodsCourse/data/NAboxgpcp.precip.mon.nc',\n",
+    "ds_g=xr.open_dataset('../../data/NAboxgpcp.precip.mon.nc',\n",
     "                          decode_times='False').sel(time=slice('1980-01-01','2014-12-31'))\n",
     "precipG=ds_g.precip.data#/1000*999.7/(24*3600) # convert from mm/day to kg/m^2/s\n",
     "precipG = np.reshape(precipG,[35,12,nlon*nlat])\n",
