fix annoying print statement

--- a/labs/Labs5/LorenzModelAssimilation.ipynb
+++ b/labs/Labs5/LorenzModelAssimilation.ipynb
@@ -643,7 +643,8 @@
     "        for j in range(0,E):\n",
     "            # obs innovation\n",
     "            y = Zobs[:,i]+np.dot(R,np.random.randn(nobs))- np.dot(Hobs,Xforecast[:,j])\n",
-    "            print(i,j,np.sum(np.abs(np.dot(K,y))))\n",
+    "\n",
+    "            # apply the kalman gain\n",
     "            Xfilter[:,j,i] = Xforecast[:,j] + np.dot(K,y)\n",
     "\n",
     "        Xanom = Xfilter[:,:,i]-Xfilter[:,:,i].mean(axis=1)[:,np.newaxis]\n",
